fixed search on IPhone

--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -167,6 +167,9 @@
 	max-width: 460px;
 	width: 100%;
 	display: flex;
+	border: 1px solid transparent;
+	border-radius: 5px;
+	overflow: hidden;
 	justify-content: center;
 	margin: 0 auto;
 
@@ -188,8 +191,6 @@
 		background-color: $white-0f;
 		outline: none;
 		border: 1px solid transparent;
-		border-top-left-radius: 3px;
-		border-bottom-left-radius: 3px;
 		transition: border-color $hoverTime ease-in, box-shadow $hoverTime ease-in;
 
 		&::placeholder {
@@ -197,8 +198,8 @@
 		}
 
 		@include md-min {
-			&:hover {
-				box-shadow: inset 0 0 5px $black-480;
+			&:focus {
+				box-shadow: inset 0 0 5px $brandColor;
 				border-color: $brandColor;
 
 				&::placeholder {
@@ -206,8 +207,12 @@
 				}
 			}
 
-			&:focus {
+			&:hover {
 				border-color: $brandColor;
+
+				&::placeholder {
+					color: $brandColor;
+				}
 			}
 		}
 	}
@@ -219,9 +224,9 @@
 		display: block;
 		max-width: 45px;
 		min-height: 37px;
-		border: 1px solid $brandColor;
-		border-top-right-radius: 3px;
-		border-bottom-right-radius: 3px;
+		// border: 1px solid $brandColor;
+		// border-top-right-radius: 3px;
+		// border-bottom-right-radius: 3px;
 		padding: 0 12px;
 		font-weight: 700;
 		color: $white-0f;
